# NVlabs___cuda-oxide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dependency-licenses.csv
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cargo-deny.yml  clippy.yml  fmt.yml  unit-tests.yml
crates/cargo-oxide/: Cargo.toml  README.md
crates/cargo-oxide/src/: commands.rs  main.rs
crates/cuda-bindings/: Cargo.toml  README.md  build.rs
crates/cuda-bindings/src/: lib.rs
crates/cuda-core/: README.md
crates/cuda-core/src/: device_buffer.rs  embedded.rs  error.rs
crates/cuda-core/tests/: pinned_host_buffer.rs
crates/cuda-device/src/: convert.rs  wmma.rs
crates/cuda-host/: README.md
crates/cuda-host/src/: embedded.rs  kernel_family.rs  launch.rs  lib.rs  ltoir.rs
crates/cuda-host/tests/: kernel_family.rs
crates/libnvvm-sys/: README.md
crates/llvm-export/: Cargo.toml  README.md
crates/mir-importer/: Cargo.toml  README.md
crates/mir-lower/: Cargo.toml
crates/nvjitlink-sys/: README.md
crates/nvvm-transforms/: Cargo.toml
crates/nvvm-transforms/src/: helpers.rs  legalize.rs  lib.rs
crates/rustc-codegen-cuda/: Cargo.toml  README.md  STATUS.md
crates/rustc-codegen-cuda/examples/error_static_initializer_provenance/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/error_static_initializer_provenance/src/: main.rs
crates/rustc-codegen-cuda/examples/legacy_nvvm_pointer_shapes/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/legacy_nvvm_pointer_shapes/src/: main.rs
crates/rustc-codegen-cuda/examples/libdevice_math/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/libdevice_math/src/: main.rs
cuda-oxide-book/appendix/: building-from-source.md  supported-features.md
cuda-oxide-book/compiler/: architecture-overview.md  mir-importer.md
cuda-oxide-book/getting-started/: hello-gpu.md  installation.md
cuda-oxide-book/gpu-programming/: error-handling-and-debugging.md  launching-kernels.md
scripts/: smoketest.sh
(+82 files in other folders)
