[package]
name = "nvvm-transforms"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Target-aware LLVM dialect legalization for NVVM"

[dependencies]
pliron = { workspace = true }
llvm-export = { workspace = true }
