[package]
name = "legacy_nvvm_pointer_shapes"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Standalone crate, not part of the parent workspace.
[workspace]

# Tests pointer shapes that must remain valid in LLVM 7 NVVM IR. Verify the
# legacy path with:
#   cargo oxide emit-ltoir legacy_nvvm_pointer_shapes --arch sm_86

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
