[package]
name = "libdevice_math"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Tests Rust math methods that are implemented by CUDA libdevice. These calls
# automatically use the NVVM IR path on both old and new GPU architectures.
# Verify the legacy path with:
#   cargo oxide emit-ltoir libdevice_math --arch sm_86

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
